# exposure-monitor

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/alerts/: Cargo.toml
crates/alerts/src/: lib.rs
crates/api/: Cargo.toml  Dockerfile
crates/api/src/: main.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/findings/: Cargo.toml
crates/findings/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/worker/: Cargo.toml  Dockerfile
crates/worker/src/: main.rs
docs/: architecture.md  art-plan.md  backlog.md  ceem-agent-rhel-ai-native.md  decision-log.md  deployment.md  security-hardening.md  security-model.md
migrations/: 202606120001_initial_schema.sql  202606120002_auth_teams_sessions.sql  202606120003_worker_scan_queue.sql  202606120004_remediation_assignee.sql  202606120005_schedules_alert_retry_risk.sql  202606130001_alert_settings.sql  202606130002_auth_hardening.sql
web/: Dockerfile  index.html  package-lock.json  package.json
web/src/: App.css  App.tsx  index.css
