[package]
name = "ceem-alerts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
ceem-shared = { path = "../shared" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
uuid.workspace = true
