[package]
name = "ceem-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
rand_core.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
