[package]
name = "ceem-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
ceem-shared = { path = "../shared" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
