[package]
name = "ceem-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
ceem-db = { path = "../db" }
ceem-findings = { path = "../findings" }
ceem-scanner = { path = "../scanner" }
ceem-shared = { path = "../shared" }
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
